# KBExtraction

./: .env  .env.example  .env.examples  .gitignore  .nfs0000000002dd028100001570  Dockerfile  README.md  constraints.txt  lockdeps-2487011.err  pyproject.toml  requirements.in  requirements.langchain.in  requirements.langchain.lock.txt  requirements.lock.no-torch.txt  requirements.lock.txt  requirements.lock.txt.bak.20260126_171403  requirements.rest.lock.txt  requirements.txt  setup.sh  venv
.lockenv/: pyvenv.cfg
configs/: config.ini  create_config.py
logs/: 00_pipeline_timing_20260211_170911Z.json  01.1.5_topic_modeling_summary_explainability_20260127_170920Z.json  01.1.5_topic_modeling_summary_explainability_20260127_192321Z.json  01.1.5_topic_modeling_summary_explainability_20260127_200443Z.json  01.1.5_topic_modeling_summary_explainability_20260128_203749Z.json  01.1.6_keybert_paragraph_matched_paragraphs_Diversity_20260217_164024Z.json  01.1.6_keybert_paragraph_matched_paragraphs_Fairness_20260217_164456Z.json  01.1.6_keybert_paragraph_matched_paragraphs_Privacy_20260217_191323Z.json  01.1.6_keybert_paragraph_matched_paragraphs_Privacy_20260217_212756Z.json  01.1.6_keybert_paragraph_matched_paragraphs_Robustness_20260217_232401Z.json  01.1.6_keybert_paragraph_matched_paragraphs_Safety_20260217_165040Z.json  01.1.6_keybert_paragraph_matched_paragraphs_Transparency_20260217_174254Z.json  01.1.6_keybert_paragraph_matched_paragraphs_[Accountability]_20260225_191031Z.json  01.1.6_keybert_paragraph_matched_paragraphs_[Accountability]_20260225_200011Z.json  (+508 more)
ui/: app.py  (+7 more)
(+252 files in other folders)
