[tool.mypy]
python_version = "3.10"
warn_unused_ignores = true
disallow_untyped_defs = true
no_implicit_optional = true
strict_optional = true

# [project]
# name = "trustifai"
# version = "0.1.0"
# python_version = "3.10"
# requires-python = ">=3.10"

[tool.setuptools.packages.find]
where = ["src"]
