[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kbdebugger"
version = "0.1.0"
description = "Knowledge-based Debugger for structured knowledge extraction and reasoning"
authors = [
  { name = "Faris Abu Ali", email = "faab02@dfki.de" }
]
readme = "README.md"
requires-python = ">=3.10"
# dependencies = [
#   "langchain",
#   "langchain-community",
#   "langchain-core",
#   "langchain-chroma",
#   "langchain-huggingface"
# ]

[tool.setuptools.packages.find]
where = ["src"] # ensures your kbdebugger/ package under src/ is found.
